Fixed index visual overflow
Also removed old references to autoapi

--- a/docs/_static/css/rtd_fixes.css
+++ b/docs/_static/css/rtd_fixes.css
@@ -34,3 +34,7 @@ div.pkgnav ul li a:hover {
     color: #f50404;
     text-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
+
+.genindextable td {
+    display: table-row;
+}
